Fix buttons alignment

--- a/src/component/style/MenuButton.scss
+++ b/src/component/style/MenuButton.scss
@@ -3,8 +3,8 @@
 
 .MenuButton-button-container {
   position: fixed;
-  bottom: 1em;
-  right: 1em;
+  bottom: 1rem;
+  right: 1rem;
   transition: opacity $short-duration, visibility $short-duration;
 
   &[data-hidden="true"] {
